Begin work on booking page *Fix z-index issue with top links on home page

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -66,6 +66,8 @@ header:before {
 }
 
 .top-nav {
+  z-index: 10;
+  position: relative;
   padding-top: 10px;
   text-align: right;
 }
@@ -258,4 +260,22 @@ footer {
 
 .bottom-nav-link:hover {
   color: #453736;
+}
+
+/* Booking Page */
+
+.booking-body {
+  background-image: url('../images/bed.jpg');
+  background-position: center center;
+  background-size: cover;
+}
+
+.main-nav-booking {
+  background-color: #718e83;
+}
+
+.booking-footer {
+  position: fixed;
+  bottom: 0;
+  background-color: #958e7d;
 }
